feat: redis登录功能完成

--- a/src/main/resources/nginx-1.18.0/html/hmdp/login.html
+++ b/src/main/resources/nginx-1.18.0/html/hmdp/login.html
@@ -36,9 +36,9 @@
         <div style="text-align: right; color:#333333; margin: 5px 0"><a href="/login2.html">密码登录</a></div>
       </div>
       <div class="login-radio">
-        <div>
-          <input type="radio" name="readed" v-model="radio" value="1">
-          <label for="readed"></label>
+        <div class="radio-container">
+          <input type="radio" id="readed" name="readed" v-model="radio" value="1">
+          <label for="readed">已读</label>
         </div>
         <div>我已阅读并同意
           <a href="javascript:void(0)">
